vitrail-pg-macros/tests/ui/fail/update_helper_unknown_where_field.stderr
error: unknown field `unknown` in update helper `where` for model `user`
  --> tests/ui/fail/update_helper_unknown_where_field.rs:5:1
   |
 5 | / schema! {
 6 | |     name update_helper_schema
 7 | |
 8 | |     model user {
...  |
22 | | }
   | |_^
...
25 |       let _ = update! {
   |  _____________-
26 | |         crate::update_helper_schema,
27 | |         post {
28 | |             data: {
...  |
39 | |     };
   | |_____- in this macro invocation
   |
   = note: this error originates in the macro `$crate::update_helper_schema::__vitrail_update_where_field_filter_update_helper_schema_user` which comes from the expansion of the macro `update` (in Nightly builds, run with -Z macro-backtrace for more info)
